syntax error in "DELETE FROM StorageAccessUnderTopFrameDomains" https://bugs.webkit.org/show_bug.cgi?id=215813 <rdar://problem/67743521>

Reviewed by Darin Adler.

Delete unnecessary code. ResourceLoadStatisticsDatabaseStore::clearExpiredUserInteractions()
is not needed. User interaction and storage access will be cleared for
expired statistics in
ResourceLoadStatisticsDatabaseStore::hasHadUnexpiredRecentUserInteraction(),
which exactly matches behavior in the memory store. If we clear the
expired statistics before setting the local var oldestUserInteraction,
then that var will likely always be equal to zero, and the check for
if (!parameters().isRunningTest && now - oldestUserInteraction < parameters().minimumTimeBetweenDataRecordsRemoval)
will always be false.

The only reason we did not notice this extra code is because the
SQLite query in clearExpiredUserInteractions() was incorrect, causing
an early return. So the function never worked properly. Fixing the
query revealed incorrect behavior.

No new tests, behavior should not change because this code was not
being run due to the SQLite error.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::registrableDomainsToDeleteOrRestrictWebsiteDataFor):
(WebKit::ResourceLoadStatisticsDatabaseStore::findExpiredUserInteractions const): Deleted.
(WebKit::ResourceLoadStatisticsDatabaseStore::clearExpiredUserInteractions): Deleted.
(WebKit::ResourceLoadStatisticsDatabaseStore::statisticsExpirationTime const): Deleted.


Canonical link: https://commits.webkit.org/228691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266237 268f45cc-cd09-0410-ab3c-d52691b4dbfc